# loom

./: .gitignore  .repomixignore  AGENTS.md  README.md  pyproject.toml  repomix-loom.md  repomix.config.json  run-server.sh  run-ui.sh  tmp.sh
.beads/: daemon-error  issues.jsonl
docs/: loom-specification.md  sdlc_quickstart.md  walkthrough.md
openspec/add-openspec-proposal-agent/: proposal.md  spec.md  tasks.md
openspec/changes/add-agentic-runner/: proposal.md  tasks.md
openspec/changes/archive/2026-01-25-bootstrap-agentic-sdlc-v1/: tasks.md
openspec/changes/bootstrap-agentic-sdlc-v1/: proposal.md  tasks.md
openspec/changes/loom-boundary-and-discovery-enforcement-v1/: tasks.md
openspec/changes/loom-conformance-fixes-v1/: proposal.md
openspec/changes/loom-decision-journaling-and-abort-hardening-v1/: proposal.md
openspec/changes/loom-link-ledger-entries-v1/: tasks.md
openspec/changes/refactor-reliability-and-devx/: proposal.md  tasks.md
reference/: pydantic-ai-llms.txt
scripts/: quality-gates.sh
sdlc/: boundary_registry.json
src/sdlc/: __init__.py  cli.py  codec.py  engine.py  io.py  models.py  phase.py  server.py
src/sdlc/agents/: __init__.py  codex_runner.py  config.py  evidence_runner.py  openrouter.py  openspec_proposer.py  planner.py  runner.py  schemas.py  verifier.py
tests/: test_agents_runner.py  test_sdlc.py  walkthrough.sh
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  types.ts  util.ts
ui/src/lib/components/: Badge.svelte  (+4 more)
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
(+15 files in other folders)
