[project]
name = "loom"
version = "0.0.1"
description = "Agentic SDLC kernel: OpenSpec + Beads validator"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pydantic-ai>=1.46.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
sdlc = "sdlc.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
